detail arrow modified

--- a/login/styles/mypage.css
+++ b/login/styles/mypage.css
@@ -399,7 +399,8 @@ body {
   gap: 100px;
 }
 #container .mypage_inner {
-  width: 1050px;
+  width: 100%;
+  max-width: 450px;
   display: flex;
   flex-direction: column;
   justify-content: center;
