--- a/login/styles/res_sign.css
+++ b/login/styles/res_sign.css
@@ -1,7 +1,229 @@
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 1024px) {
   #container {
     width: 100%;
     gap: 100px;
+  }
+  #container .sign_inner {
+    width: 100%;
+    gap: 20px;
+  }
+  #container .sign_inner .sign_form {
+    width: 100%;
+    max-width: 390px;
+    gap: 20px;
+  }
+  #container .sign_inner .sign_form .sign_title {
+    gap: 20px;
+  }
+  #container .sign_inner .sign_form .sign_title h2 {
+    width: 100%;
+    font-size: 2.8rem;
+  }
+  #container .sign_inner .sign_form .sign_title p {
+    font-size: 1.4rem;
+  }
+  #container .sign_inner .sign_form .sign_id > :nth-child(1) h2 {
+    font-size: 1.6rem;
+  }
+  #container .sign_inner .sign_form .sign_id > :nth-child(1) h2 b {
+    font-size: 1.6rem;
+  }
+  #container .sign_inner .sign_form .sign_id > :nth-child(1) p {
+    font-size: 1.2rem;
+  }
+  #container .sign_inner .sign_form .sign_id > :nth-child(2) input {
+    padding: 8px 16px;
+    height: 50px;
+    font-size: 1.4rem;
+  }
+  #container .sign_inner .sign_form .sign_pw > :nth-child(1) h2 {
+    font-size: 1.6rem;
+  }
+  #container .sign_inner .sign_form .sign_pw > :nth-child(1) h2 b {
+    font-size: 1.6rem;
+    font-weight: bold;
+  }
+  #container .sign_inner .sign_form .sign_pw > :nth-child(1) p {
+    font-size: 1.2rem;
+  }
+  #container .sign_inner .sign_form .sign_pw > :nth-child(2) input {
+    height: 50px;
+    padding: 8px 40px 8px 16px;
+    font-size: 1.4rem;
+  }
+  #container .sign_inner .sign_form .sign_pw > :nth-child(2) i {
+    font-size: 1.4rem;
+    background: #fff;
+    position: absolute;
+    right: 16px;
+  }
+  #container .sign_inner .sign_form .sign_pw_again > :nth-child(1) h2 {
+    font-size: 1.6rem;
+  }
+  #container .sign_inner .sign_form .sign_pw_again > :nth-child(1) h2 b {
+    font-size: 1.6rem;
+    font-weight: bold;
+  }
+  #container .sign_inner .sign_form .sign_pw_again > :nth-child(1) p {
+    font-size: 1.2rem;
+  }
+  #container .sign_inner .sign_form .sign_pw_again > :nth-child(2) input {
+    height: 50px;
+    padding: 8px 40px 8px 16px;
+    font-size: 1.4rem;
+  }
+  #container .sign_inner .sign_form .sign_pw_again > :nth-child(2) i {
+    font-size: 1.4rem;
+    background: #fff;
+    position: absolute;
+    right: 16px;
+  }
+  #container .sign_inner .sign_form .sign_name > :nth-child(1) h2 {
+    font-size: 1.6rem;
+  }
+  #container .sign_inner .sign_form .sign_name > :nth-child(1) h2 b {
+    font-size: 1.6rem;
+  }
+  #container .sign_inner .sign_form .sign_name > :nth-child(1) p {
+    font-size: 1.2rem;
+  }
+  #container .sign_inner .sign_form .sign_name > :nth-child(2) input {
+    padding: 8px 16px;
+    height: 50px;
+    font-size: 1.4rem;
+  }
+  #container .sign_inner .sign_form .sign_date {
+    width: 100%;
+    gap: 10px;
+  }
+  #container .sign_inner .sign_form .sign_date .sign_date_text h2 {
+    font-size: 1.6rem;
+  }
+  #container .sign_inner .sign_form .sign_date .date_select {
+    width: 100%;
+  }
+  #container .sign_inner .sign_form .sign_date .date_select .date_select_year {
+    width: 30%;
+    height: 50px;
+    padding: 8px 16px;
+    background: url(/login/login_imgs/arrow.png) no-repeat right 16px center/1rem;
+    font-size: 1.4rem;
+  }
+  #container .sign_inner .sign_form .sign_date .date_select .date_select_month {
+    width: 30%;
+    height: 50px;
+    padding: 8px 16px;
+    background: url(/login/login_imgs/arrow.png) no-repeat right 16px center/1rem;
+    font-size: 1.4rem;
+  }
+  #container .sign_inner .sign_form .sign_date .date_select .date_select_day {
+    width: 30%;
+    height: 50px;
+    padding: 8px 16px;
+    background: url(/login/login_imgs/arrow.png) no-repeat right 16px center/1rem;
+    font-size: 1.4rem;
+  }
+  #container .sign_inner .sign_form .sign_email {
+    width: 100%;
+    gap: 10px;
+  }
+  #container .sign_inner .sign_form .sign_email > :nth-child(1) h2 {
+    font-size: 1.6rem;
+  }
+  #container .sign_inner .sign_form .sign_email > :nth-child(1) h2 b {
+    font-size: 1.6rem;
+  }
+  #container .sign_inner .sign_form .sign_email > :nth-child(1) p {
+    font-size: 1.2rem;
+  }
+  #container .sign_inner .sign_form .sign_email .email_input input {
+    height: 50px;
+    padding: 8px 16px;
+    font-size: 1.4rem;
+  }
+  #container .sign_inner .sign_form .sign_email .email_input p {
+    font-size: 1.6rem;
+  }
+  #container .sign_inner .sign_form .sign_email .email_input select {
+    width: 30%;
+    height: 50px;
+    padding: 8px 16px;
+    background: url(/login/login_imgs/arrow.png) no-repeat right 16px center/1rem;
+    font-size: 1.4rem;
+  }
+  #container .sign_inner .sign_form .sign_call {
+    width: 100%;
+    gap: 10px;
+  }
+  #container .sign_inner .sign_form .sign_call > :nth-child(1) h2 {
+    font-size: 1.6rem;
+  }
+  #container .sign_inner .sign_form .sign_call > :nth-child(1) h2 b {
+    font-size: 1.6rem;
+  }
+  #container .sign_inner .sign_form .sign_call > :nth-child(1) p {
+    font-size: 1.2rem;
+  }
+  #container .sign_inner .sign_form .sign_call .call_input input {
+    width: 30%;
+    height: 50px;
+    padding: 8px 16px;
+    font-size: 1.4rem;
+  }
+  #container .sign_inner .sign_form .sign_address > :nth-child(1) h2 {
+    font-size: 1.6rem;
+  }
+  #container .sign_inner .sign_form .sign_address > :nth-child(1) h2 b {
+    font-size: 1.6rem;
+  }
+  #container .sign_inner .sign_form .sign_address > :nth-child(1) p {
+    font-size: 1.2rem;
+  }
+  #container .sign_inner .sign_form .sign_address > :nth-child(2) input {
+    padding: 8px 16px;
+    height: 50px;
+    font-size: 1.4rem;
+  }
+  #container .sign_inner .sign_checkbox {
+    width: 100%;
+    gap: 10px;
+  }
+  #container .sign_inner .sign_checkbox div {
+    width: 100%;
+    gap: 10px;
+  }
+  #container .sign_inner .sign_checkbox div .check_boxes {
+    width: 20px;
+    height: 20px;
+  }
+  #container .sign_inner .sign_checkbox div .check_boxes:checked::after {
+    font-size: 1.8rem;
+  }
+  #container .sign_inner .sign_checkbox div ul {
+    width: 100%;
+  }
+  #container .sign_inner .sign_checkbox div ul li {
+    font-size: 1.6rem;
+  }
+  #container .sign_inner .sign_checkbox div ul li b {
+    font-size: 1.6rem;
+  }
+  #container .sign_inner .sign_checkbox div ul li.sign_error_message {
+    font-size: 1.2rem;
+  }
+  #container .sign_inner .sign_button {
+    width: 100%;
+    height: 50px;
+    font-size: 1.6rem;
+  }
+}
+@media screen and (max-width: 500px) {
+  body {
+    gap: 50px;
+  }
+  #container {
+    width: 100%;
+    gap: 50px;
   }
   #container .sign_inner {
     width: 100%;
