--- a/login/styles/res_sign.scss
+++ b/login/styles/res_sign.scss
@@ -1,6 +1,214 @@
 // variables
 @import "../../styles/variables.scss";
 
+@media screen and (max-width: 1024px) {
+  @mixin type-01 {
+    & > :nth-child(1) {
+      h2 {
+        font-size: 1.6rem;
+        b {
+          font-size: 1.6rem;
+        }
+      }
+      p {
+        font-size: 1.2rem;
+      }
+    }
+    & > :nth-child(2) {
+      input {
+        padding: 8px 16px;
+        height: 50px;
+        font-size: 1.4rem;
+      }
+    }
+  }
+
+  @mixin type-02 {
+    & > :nth-child(1) {
+      h2 {
+        font-size: 1.6rem;
+        b {
+          font-size: 1.6rem;
+          font-weight: bold;
+        }
+      }
+      p {
+        font-size: 1.2rem;
+      }
+    }
+    & > :nth-child(2) {
+      input {
+        height: 50px;
+        padding: 8px 40px 8px 16px;
+        font-size: 1.4rem;
+      }
+      i {
+        font-size: 1.4rem;
+        background: #fff;
+        position: absolute;
+        right: 16px;
+      }
+    }
+  }
+
+  @mixin type-03 {
+    width: 30%;
+    height: 50px;
+    padding: 8px 16px;
+    background: url(/login/login_imgs/arrow.png) no-repeat right 16px center /
+      1rem;
+    font-size: 1.4rem;
+  }
+
+  #container {
+    width: 100%;
+    gap: 100px;
+    .sign_inner {
+      width: 100%;
+      gap: 20px;
+      .sign_form {
+        width: 100%;
+        max-width: 390px;
+        gap: 20px;
+        .sign_title {
+          gap: 20px;
+          h2 {
+            width: 100%;
+            font-size: 2.8rem;
+          }
+          p {
+            font-size: 1.4rem;
+          }
+        }
+        .sign_id {
+          @include type-01;
+        }
+        .sign_pw {
+          @include type-02;
+        }
+        .sign_pw_again {
+          @include type-02;
+        }
+        .sign_name {
+          @include type-01;
+        }
+        .sign_date {
+          width: 100%;
+          gap: 10px;
+          .sign_date_text {
+            h2 {
+              font-size: 1.6rem;
+            }
+          }
+          .date_select {
+            width: 100%;
+            .date_select_year {
+              @include type-03;
+            }
+            .date_select_month {
+              @include type-03;
+            }
+            .date_select_day {
+              @include type-03;
+            }
+          }
+        }
+        .sign_email {
+          width: 100%;
+          gap: 10px;
+          & > :nth-child(1) {
+            h2 {
+              font-size: 1.6rem;
+              b {
+                font-size: 1.6rem;
+              }
+            }
+            p {
+              font-size: 1.2rem;
+            }
+          }
+          .email_input {
+            input {
+              height: 50px;
+              padding: 8px 16px;
+              font-size: 1.4rem;
+            }
+            p {
+              font-size: 1.6rem;
+            }
+            select {
+              width: 30%;
+              height: 50px;
+              padding: 8px 16px;
+              background: url(/login/login_imgs/arrow.png) no-repeat right 16px
+                center / 1rem;
+              font-size: 1.4rem;
+            }
+          }
+        }
+        .sign_call {
+          width: 100%;
+          gap: 10px;
+          & > :nth-child(1) {
+            h2 {
+              font-size: 1.6rem;
+              b {
+                font-size: 1.6rem;
+              }
+            }
+            p {
+              font-size: 1.2rem;
+            }
+          }
+          .call_input {
+            input {
+              width: 30%;
+              height: 50px;
+              padding: 8px 16px;
+              font-size: 1.4rem;
+            }
+          }
+        }
+        .sign_address {
+          @include type-01;
+        }
+      }
+      .sign_checkbox {
+        width: 100%;
+        gap: 10px;
+        div {
+          width: 100%;
+          gap: 10px;
+          .check_boxes {
+            width: 20px;
+            height: 20px;
+          }
+          .check_boxes:checked::after {
+            font-size: 1.8rem;
+          }
+          ul {
+            width: 100%;
+            li {
+              font-size: 1.6rem;
+              b {
+                font-size: 1.6rem;
+              }
+              &.sign_error_message {
+                font-size: 1.2rem;
+              }
+            }
+          }
+        }
+      }
+      .sign_button {
+        width: 100%;
+        height: 50px;
+        font-size: 1.6rem;
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 500px) {
   @mixin type-01 {
     & > :nth-child(1) {
@@ -60,10 +268,12 @@
       1rem;
     font-size: 1.2rem;
   }
-
+  body {
+    gap: 50px;
+  }
   #container {
     width: 100%;
-    gap: 100px;
+    gap: 50px;
     .sign_inner {
       width: 100%;
       gap: 20px;
