--- a/login/styles/find.css
+++ b/login/styles/find.css
@@ -376,6 +376,478 @@ footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_right
   line-height: 140%;
 }
 
+@media screen and (max-width: 1440px) {
+  header .header_event {
+    height: 45px;
+  }
+  header .header_inner {
+    width: 100%;
+    height: 170px;
+    padding: 20px 100px;
+  }
+  header .header_inner .header_inner_left ul {
+    gap: 30px;
+  }
+  header .header_inner .header_inner_left ul li {
+    font-size: 1.8rem;
+  }
+  header .header_inner .header_inner_left ul div {
+    display: none;
+  }
+  header .header_inner .header_inner_right .inner_right_top ul {
+    gap: 10px;
+    font-size: 1.4rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom {
+    gap: 22px;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .search_bar {
+    width: 220px;
+    height: 35px;
+    padding: 5px 15px;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .search_bar input::-moz-placeholder {
+    font-size: 1.2rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .search_bar input::placeholder {
+    font-size: 1.2rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .search_bar .fa-magnifying-glass {
+    font-size: 1.4rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .basket .fa-cart-shopping {
+    width: 32px;
+    height: 30px;
+    font-size: 2.4rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .basket p {
+    width: 16px;
+    height: 16px;
+    font-size: 1rem;
+  }
+  header .header_inner .header_inner_logo {
+    transform: translate(-50%, -50%) scale(0.9);
+  }
+}
+@media screen and (max-width: 1024px) {
+  header .header_event {
+    height: 40px;
+  }
+  header .header_inner {
+    width: 100%;
+    height: 160px;
+    padding: 20px 50px;
+  }
+  header .header_inner .header_inner_left ul {
+    gap: 16px;
+  }
+  header .header_inner .header_inner_left ul li {
+    font-size: 1.6rem;
+  }
+  header .header_inner .header_inner_right .inner_right_top ul {
+    gap: 9px;
+    font-size: 1.3rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom {
+    gap: 16px;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .search_bar {
+    width: 190px;
+    height: 30px;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .search_bar input::-moz-placeholder {
+    font-size: 1.1rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .search_bar input::placeholder {
+    font-size: 1.1rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .search_bar .fa-magnifying-glass {
+    font-size: 1.3rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .basket .fa-cart-shopping {
+    width: 30px;
+    height: 28px;
+    font-size: 2.2rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .basket p {
+    width: 15px;
+    height: 15px;
+    font-size: 0.9rem;
+  }
+  header .header_inner .header_inner_logo {
+    transform: translate(-50%, -50%) scale(0.8);
+  }
+}
+@media screen and (max-width: 767px) {
+  header .header_event {
+    height: 35px;
+    font-size: 1.2rem;
+  }
+  header .header_inner {
+    width: 100%;
+    height: 110px;
+    padding: 16px 20px;
+  }
+  header .header_inner nav {
+    display: flex;
+  }
+  header .header_inner nav .gnb {
+    pointer-events: auto;
+  }
+  header .header_inner .trigger {
+    display: flex;
+  }
+  header .header_inner .header_inner_left ul li {
+    display: none;
+  }
+  header .header_inner .header_inner_left ul .header_menu_trigger {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+  }
+  header .header_inner .header_inner_left ul .header_menu_trigger span:nth-child(1) {
+    width: 30px;
+    height: 2px;
+    position: absolute;
+    top: 0;
+    background: #000;
+  }
+  header .header_inner .header_inner_left ul .header_menu_trigger span:nth-child(2) {
+    width: 30px;
+    height: 2px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: #000;
+  }
+  header .header_inner .header_inner_left ul .header_menu_trigger span:nth-child(3) {
+    width: 30px;
+    height: 2px;
+    position: absolute;
+    bottom: 0;
+    background: #000;
+  }
+  header .header_inner .header_inner_right .inner_right_top ul {
+    gap: 8px;
+    font-size: 1rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom {
+    gap: 12px;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .search_bar {
+    display: none;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .res_magnify {
+    display: block;
+    font-size: 2rem;
+    margin-bottom: 6px;
+    cursor: pointer;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .basket .fa-cart-shopping {
+    width: 28px;
+    height: 26px;
+    font-size: 2rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .basket p {
+    width: 14px;
+    height: 14px;
+    font-size: 0.8rem;
+  }
+  header .header_inner .header_inner_logo {
+    transform: translate(-50%, -50%) scale(0.7);
+  }
+}
+@media screen and (max-width: 500px) {
+  header .header_event {
+    height: 30px;
+    font-size: 1.1rem;
+  }
+  header .header_inner {
+    width: 100%;
+    height: 100px;
+    padding: 12px 20px;
+  }
+  header .header_inner nav .gnb {
+    top: 130px;
+    width: 140px;
+    padding: 20px;
+  }
+  header .header_inner nav .gnb li {
+    font-size: 1.4rem;
+    padding: 8px;
+  }
+  header .header_inner .trigger {
+    bottom: 12px;
+    gap: 4px;
+  }
+  header .header_inner .trigger span {
+    width: 20px;
+    background-color: #333;
+    transition: 0.4s;
+  }
+  header .header_inner .trigger.active span:nth-child(1) {
+    transform: translateY(6px) rotate(45deg);
+  }
+  header .header_inner .trigger.active span:nth-child(3) {
+    transform: translateY(-6px) rotate(-45deg);
+  }
+  header .header_inner .header_inner_left ul .header_menu_trigger {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+  }
+  header .header_inner .header_inner_left ul .header_menu_trigger span:nth-child(1) {
+    width: 30px;
+    height: 2px;
+    position: absolute;
+    top: 0;
+    background: #000;
+  }
+  header .header_inner .header_inner_left ul .header_menu_trigger span:nth-child(2) {
+    width: 30px;
+    height: 2px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: #000;
+  }
+  header .header_inner .header_inner_left ul .header_menu_trigger span:nth-child(3) {
+    width: 30px;
+    height: 2px;
+    position: absolute;
+    bottom: 0;
+    background: #000;
+  }
+  header .header_inner .header_inner_right .inner_right_top ul {
+    gap: 7px;
+    font-size: 1rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom {
+    gap: 12px;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .search_bar {
+    display: none;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .res_magnify {
+    font-size: 1.7rem;
+    margin-bottom: 6px;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .basket .fa-cart-shopping {
+    width: 24px;
+    height: 22px;
+    font-size: 1.8rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .basket p {
+    width: 14px;
+    height: 14px;
+    font-size: 0.8rem;
+  }
+  header .header_inner .header_inner_logo {
+    transform: translate(-50%, -50%) scale(0.6);
+    padding-top: 5px;
+  }
+}
+@media screen and (max-width: 1440px) {
+  footer .footer_inner {
+    margin: 50px 100px;
+  }
+  footer .footer_inner .footer_inner_left img {
+    width: 150px;
+    height: 65px;
+  }
+  footer .footer_inner .footer_inner_left p {
+    font-size: 1.3rem;
+  }
+  footer .footer_inner .footer_inner_center ul li {
+    font-size: 1.3rem;
+  }
+  footer .footer_inner .footer_inner_center ul li:last-child {
+    font-size: 1.5rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(1) {
+    font-size: 1.5rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(2) {
+    font-size: 2.2rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(1) {
+    font-size: 1.3rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(2) {
+    font-size: 0.9rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_right {
+    font-size: 1.3rem;
+    line-height: 130%;
+  }
+}
+@media screen and (max-width: 1024px) {
+  footer .footer_inner {
+    margin: 50px 50px;
+  }
+  footer .footer_inner .footer_inner_left {
+    gap: 8px;
+  }
+  footer .footer_inner .footer_inner_left img {
+    width: 130px;
+    height: 55px;
+  }
+  footer .footer_inner .footer_inner_left p {
+    font-size: 1.1rem;
+  }
+  footer .footer_inner .footer_inner_center ul {
+    gap: 8px;
+  }
+  footer .footer_inner .footer_inner_center ul li {
+    font-size: 1.1rem;
+  }
+  footer .footer_inner .footer_inner_center ul li:last-child {
+    font-size: 1.3rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(1) {
+    font-size: 1.4rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(2) {
+    font-size: 2rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left {
+    gap: 1px;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(1) {
+    font-size: 1.2rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(2) {
+    font-size: 0.9rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_right {
+    font-size: 1.2rem;
+    line-height: 120%;
+  }
+}
+@media screen and (max-width: 767px) {
+  footer .footer_inner {
+    margin: 50px 100px;
+    justify-content: space-around;
+  }
+  footer .footer_inner .footer_inner_left {
+    gap: 8px;
+  }
+  footer .footer_inner .footer_inner_left img {
+    width: 120px;
+    height: 50px;
+  }
+  footer .footer_inner .footer_inner_left p {
+    font-size: 1.1rem;
+  }
+  footer .footer_inner .footer_inner_center {
+    display: none;
+  }
+  footer .footer_inner .footer_inner_right {
+    gap: 8px;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_top ul {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(1) {
+    display: flex;
+    align-items: center;
+    gap: 1px;
+    font-size: 1.6rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(1) b {
+    display: block;
+    font-size: 1.6rem;
+    line-height: 1.6rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(2) {
+    font-size: 1.4rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom {
+    flex-direction: column;
+    gap: 5px;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left {
+    display: flex;
+    align-items: start;
+    gap: 1px;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(1) {
+    font-size: 1.2rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(1) b {
+    display: none;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(2) {
+    display: none;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_right {
+    font-size: 1.2rem;
+    line-height: 120%;
+  }
+}
+@media screen and (max-width: 500px) {
+  footer .footer_inner {
+    min-width: 300px;
+    margin: 30px 100px;
+    justify-content: space-between;
+  }
+  footer .footer_inner .footer_inner_left {
+    gap: 3px;
+  }
+  footer .footer_inner .footer_inner_left img {
+    width: 110px;
+    height: 50px;
+  }
+  footer .footer_inner .footer_inner_left p {
+    font-size: 1rem;
+  }
+  footer .footer_inner .footer_inner_center {
+    display: none;
+  }
+  footer .footer_inner .footer_inner_right {
+    gap: 5px;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_top ul {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(1) {
+    display: flex;
+    align-items: center;
+    gap: 1px;
+    font-size: 1.4rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(2) {
+    font-size: 1.2rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom {
+    flex-direction: column;
+    gap: 5px;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left {
+    display: flex;
+    align-items: start;
+    gap: 5px;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(1) {
+    font-size: 1.2rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(2) {
+    display: none;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_right {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    font-size: 1rem;
+    line-height: 100%;
+  }
+}
 html {
   font-size: 62.5%;
 }
@@ -399,11 +871,15 @@ body {
   gap: 30px;
 }
 #container .find_inner {
-  width: 1050px;
+  width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 #container .find_inner .find_id {
+  width: 100%;
+  max-width: 450px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -416,12 +892,13 @@ body {
   font-weight: bold;
 }
 #container .find_inner .find_id .find_switch {
-  width: 450px;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 #container .find_inner .find_id .find_switch .find_switch_call {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -429,6 +906,7 @@ body {
   gap: 10px;
 }
 #container .find_inner .find_id .find_switch .find_switch_call p {
+  width: 50%;
   font-family: pretendard;
   font-size: 2.2rem;
   font-weight: bold;
@@ -439,7 +917,7 @@ body {
   color: #f37100;
 }
 #container .find_inner .find_id .find_switch .find_switch_call hr {
-  width: 225px;
+  width: 100%;
   height: 2px;
   border: none;
   background: #ccc;
@@ -449,6 +927,7 @@ body {
   background: #f37100;
 }
 #container .find_inner .find_id .find_switch .find_switch_email {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -456,6 +935,7 @@ body {
   gap: 10px;
 }
 #container .find_inner .find_id .find_switch .find_switch_email p {
+  width: 50%;
   font-family: pretendard;
   font-size: 2.2rem;
   font-weight: bold;
@@ -466,7 +946,7 @@ body {
   color: #f37100;
 }
 #container .find_inner .find_id .find_switch .find_switch_email hr {
-  width: 225px;
+  width: 100%;
   height: 2px;
   border: none;
   background: #ccc;
@@ -476,7 +956,7 @@ body {
   background: #f37100;
 }
 #container .find_inner .find_id .find_by_name {
-  width: 450px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -496,7 +976,7 @@ body {
   color: #ff5454;
 }
 #container .find_inner .find_id .find_by_name input {
-  width: 450px;
+  width: 100%;
   height: 60px;
   padding: 10px 20px;
   border: 1px solid #999;
@@ -524,7 +1004,7 @@ body {
   color: #ccc;
 }
 #container .find_inner .find_id .find_by_call {
-  width: 450px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -544,7 +1024,7 @@ body {
   color: #ff5454;
 }
 #container .find_inner .find_id .find_by_call input {
-  width: 450px;
+  width: 100%;
   height: 60px;
   padding: 10px 20px;
   border: 1px solid #999;
@@ -572,7 +1052,7 @@ body {
   color: #ccc;
 }
 #container .find_inner .find_id .find_by_email {
-  width: 450px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -593,7 +1073,7 @@ body {
   color: #ff5454;
 }
 #container .find_inner .find_id .find_by_email input {
-  width: 450px;
+  width: 100%;
   height: 60px;
   padding: 10px 20px;
   border: 1px solid #999;
@@ -621,7 +1101,7 @@ body {
   color: #ccc;
 }
 #container .find_inner .find_id .find_button {
-  width: 450px;
+  width: 100%;
   height: 60px;
   background: #f37100;
   border: none;
