--- a/login/styles/find.scss
+++ b/login/styles/find.scss
@@ -10,13 +10,19 @@
 // footer
 @import "../../styles/footer.scss";
 
+// response
+@import "../../styles/res_header.scss";
+@import "../../styles/res_footer.scss";
+
 @mixin find-switch {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 10px;
   p {
+    width: 50%;
     font-family: map-get($map: $font, $key: pretendard);
     font-size: 2.2rem;
     font-weight: bold;
@@ -27,7 +33,7 @@
     cursor: pointer;
   }
   hr {
-    width: 225px;
+    width: 100%;
     height: 2px;
     border: none;
     background: map-get($map: $color, $key: gray-ccc);
@@ -39,7 +45,7 @@
 }
 
 @mixin find-div {
-  width: 450px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -58,7 +64,7 @@
     }
   }
   input {
-    width: 450px;
+    width: 100%;
     height: 60px;
     padding: 10px 20px;
     border: 1px solid map-get($map: $color, $key: gray-999);
@@ -103,10 +109,14 @@ body {
   align-items: center;
   gap: 30px;
   .find_inner {
-    width: 1050px;
+    width: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     .find_id {
+      width: 100%;
+      max-width: 450px;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -118,7 +128,7 @@ body {
         font-weight: bold;
       }
       .find_switch {
-        width: 450px;
+        width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -140,7 +150,7 @@ body {
         display: none;
       }
       .find_button {
-        width: 450px;
+        width: 100%;
         height: 60px;
         background: map-get($map: $color, $key: main-01);
         border: none;
