--- a/login/styles/mypage.css
+++ b/login/styles/mypage.css
@@ -376,6 +376,478 @@ footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_right
   line-height: 140%;
 }
 
+@media screen and (max-width: 1440px) {
+  header .header_event {
+    height: 45px;
+  }
+  header .header_inner {
+    width: 100%;
+    height: 170px;
+    padding: 20px 100px;
+  }
+  header .header_inner .header_inner_left ul {
+    gap: 30px;
+  }
+  header .header_inner .header_inner_left ul li {
+    font-size: 1.8rem;
+  }
+  header .header_inner .header_inner_left ul div {
+    display: none;
+  }
+  header .header_inner .header_inner_right .inner_right_top ul {
+    gap: 10px;
+    font-size: 1.4rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom {
+    gap: 22px;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .search_bar {
+    width: 220px;
+    height: 35px;
+    padding: 5px 15px;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .search_bar input::-moz-placeholder {
+    font-size: 1.2rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .search_bar input::placeholder {
+    font-size: 1.2rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .search_bar .fa-magnifying-glass {
+    font-size: 1.4rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .basket .fa-cart-shopping {
+    width: 32px;
+    height: 30px;
+    font-size: 2.4rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .basket p {
+    width: 16px;
+    height: 16px;
+    font-size: 1rem;
+  }
+  header .header_inner .header_inner_logo {
+    transform: translate(-50%, -50%) scale(0.9);
+  }
+}
+@media screen and (max-width: 1024px) {
+  header .header_event {
+    height: 40px;
+  }
+  header .header_inner {
+    width: 100%;
+    height: 160px;
+    padding: 20px 50px;
+  }
+  header .header_inner .header_inner_left ul {
+    gap: 16px;
+  }
+  header .header_inner .header_inner_left ul li {
+    font-size: 1.6rem;
+  }
+  header .header_inner .header_inner_right .inner_right_top ul {
+    gap: 9px;
+    font-size: 1.3rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom {
+    gap: 16px;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .search_bar {
+    width: 190px;
+    height: 30px;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .search_bar input::-moz-placeholder {
+    font-size: 1.1rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .search_bar input::placeholder {
+    font-size: 1.1rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .search_bar .fa-magnifying-glass {
+    font-size: 1.3rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .basket .fa-cart-shopping {
+    width: 30px;
+    height: 28px;
+    font-size: 2.2rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .basket p {
+    width: 15px;
+    height: 15px;
+    font-size: 0.9rem;
+  }
+  header .header_inner .header_inner_logo {
+    transform: translate(-50%, -50%) scale(0.8);
+  }
+}
+@media screen and (max-width: 767px) {
+  header .header_event {
+    height: 35px;
+    font-size: 1.2rem;
+  }
+  header .header_inner {
+    width: 100%;
+    height: 110px;
+    padding: 16px 20px;
+  }
+  header .header_inner nav {
+    display: flex;
+  }
+  header .header_inner nav .gnb {
+    pointer-events: auto;
+  }
+  header .header_inner .trigger {
+    display: flex;
+  }
+  header .header_inner .header_inner_left ul li {
+    display: none;
+  }
+  header .header_inner .header_inner_left ul .header_menu_trigger {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+  }
+  header .header_inner .header_inner_left ul .header_menu_trigger span:nth-child(1) {
+    width: 30px;
+    height: 2px;
+    position: absolute;
+    top: 0;
+    background: #000;
+  }
+  header .header_inner .header_inner_left ul .header_menu_trigger span:nth-child(2) {
+    width: 30px;
+    height: 2px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: #000;
+  }
+  header .header_inner .header_inner_left ul .header_menu_trigger span:nth-child(3) {
+    width: 30px;
+    height: 2px;
+    position: absolute;
+    bottom: 0;
+    background: #000;
+  }
+  header .header_inner .header_inner_right .inner_right_top ul {
+    gap: 8px;
+    font-size: 1rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom {
+    gap: 12px;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .search_bar {
+    display: none;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .res_magnify {
+    display: block;
+    font-size: 2rem;
+    margin-bottom: 6px;
+    cursor: pointer;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .basket .fa-cart-shopping {
+    width: 28px;
+    height: 26px;
+    font-size: 2rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .basket p {
+    width: 14px;
+    height: 14px;
+    font-size: 0.8rem;
+  }
+  header .header_inner .header_inner_logo {
+    transform: translate(-50%, -50%) scale(0.7);
+  }
+}
+@media screen and (max-width: 500px) {
+  header .header_event {
+    height: 30px;
+    font-size: 1.1rem;
+  }
+  header .header_inner {
+    width: 100%;
+    height: 100px;
+    padding: 12px 20px;
+  }
+  header .header_inner nav .gnb {
+    top: 130px;
+    width: 140px;
+    padding: 20px;
+  }
+  header .header_inner nav .gnb li {
+    font-size: 1.4rem;
+    padding: 8px;
+  }
+  header .header_inner .trigger {
+    bottom: 12px;
+    gap: 4px;
+  }
+  header .header_inner .trigger span {
+    width: 20px;
+    background-color: #333;
+    transition: 0.4s;
+  }
+  header .header_inner .trigger.active span:nth-child(1) {
+    transform: translateY(6px) rotate(45deg);
+  }
+  header .header_inner .trigger.active span:nth-child(3) {
+    transform: translateY(-6px) rotate(-45deg);
+  }
+  header .header_inner .header_inner_left ul .header_menu_trigger {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+  }
+  header .header_inner .header_inner_left ul .header_menu_trigger span:nth-child(1) {
+    width: 30px;
+    height: 2px;
+    position: absolute;
+    top: 0;
+    background: #000;
+  }
+  header .header_inner .header_inner_left ul .header_menu_trigger span:nth-child(2) {
+    width: 30px;
+    height: 2px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: #000;
+  }
+  header .header_inner .header_inner_left ul .header_menu_trigger span:nth-child(3) {
+    width: 30px;
+    height: 2px;
+    position: absolute;
+    bottom: 0;
+    background: #000;
+  }
+  header .header_inner .header_inner_right .inner_right_top ul {
+    gap: 7px;
+    font-size: 1rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom {
+    gap: 12px;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .search_bar {
+    display: none;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .res_magnify {
+    font-size: 1.7rem;
+    margin-bottom: 6px;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .basket .fa-cart-shopping {
+    width: 24px;
+    height: 22px;
+    font-size: 1.8rem;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .basket p {
+    width: 14px;
+    height: 14px;
+    font-size: 0.8rem;
+  }
+  header .header_inner .header_inner_logo {
+    transform: translate(-50%, -50%) scale(0.6);
+    padding-top: 5px;
+  }
+}
+@media screen and (max-width: 1440px) {
+  footer .footer_inner {
+    margin: 50px 100px;
+  }
+  footer .footer_inner .footer_inner_left img {
+    width: 150px;
+    height: 65px;
+  }
+  footer .footer_inner .footer_inner_left p {
+    font-size: 1.3rem;
+  }
+  footer .footer_inner .footer_inner_center ul li {
+    font-size: 1.3rem;
+  }
+  footer .footer_inner .footer_inner_center ul li:last-child {
+    font-size: 1.5rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(1) {
+    font-size: 1.5rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(2) {
+    font-size: 2.2rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(1) {
+    font-size: 1.3rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(2) {
+    font-size: 0.9rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_right {
+    font-size: 1.3rem;
+    line-height: 130%;
+  }
+}
+@media screen and (max-width: 1024px) {
+  footer .footer_inner {
+    margin: 50px 50px;
+  }
+  footer .footer_inner .footer_inner_left {
+    gap: 8px;
+  }
+  footer .footer_inner .footer_inner_left img {
+    width: 130px;
+    height: 55px;
+  }
+  footer .footer_inner .footer_inner_left p {
+    font-size: 1.1rem;
+  }
+  footer .footer_inner .footer_inner_center ul {
+    gap: 8px;
+  }
+  footer .footer_inner .footer_inner_center ul li {
+    font-size: 1.1rem;
+  }
+  footer .footer_inner .footer_inner_center ul li:last-child {
+    font-size: 1.3rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(1) {
+    font-size: 1.4rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(2) {
+    font-size: 2rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left {
+    gap: 1px;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(1) {
+    font-size: 1.2rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(2) {
+    font-size: 0.9rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_right {
+    font-size: 1.2rem;
+    line-height: 120%;
+  }
+}
+@media screen and (max-width: 767px) {
+  footer .footer_inner {
+    margin: 50px 100px;
+    justify-content: space-around;
+  }
+  footer .footer_inner .footer_inner_left {
+    gap: 8px;
+  }
+  footer .footer_inner .footer_inner_left img {
+    width: 120px;
+    height: 50px;
+  }
+  footer .footer_inner .footer_inner_left p {
+    font-size: 1.1rem;
+  }
+  footer .footer_inner .footer_inner_center {
+    display: none;
+  }
+  footer .footer_inner .footer_inner_right {
+    gap: 8px;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_top ul {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(1) {
+    display: flex;
+    align-items: center;
+    gap: 1px;
+    font-size: 1.6rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(1) b {
+    display: block;
+    font-size: 1.6rem;
+    line-height: 1.6rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(2) {
+    font-size: 1.4rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom {
+    flex-direction: column;
+    gap: 5px;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left {
+    display: flex;
+    align-items: start;
+    gap: 1px;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(1) {
+    font-size: 1.2rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(1) b {
+    display: none;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(2) {
+    display: none;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_right {
+    font-size: 1.2rem;
+    line-height: 120%;
+  }
+}
+@media screen and (max-width: 500px) {
+  footer .footer_inner {
+    min-width: 300px;
+    margin: 30px 100px;
+    justify-content: space-between;
+  }
+  footer .footer_inner .footer_inner_left {
+    gap: 3px;
+  }
+  footer .footer_inner .footer_inner_left img {
+    width: 110px;
+    height: 50px;
+  }
+  footer .footer_inner .footer_inner_left p {
+    font-size: 1rem;
+  }
+  footer .footer_inner .footer_inner_center {
+    display: none;
+  }
+  footer .footer_inner .footer_inner_right {
+    gap: 5px;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_top ul {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(1) {
+    display: flex;
+    align-items: center;
+    gap: 1px;
+    font-size: 1.4rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(2) {
+    font-size: 1.2rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom {
+    flex-direction: column;
+    gap: 5px;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left {
+    display: flex;
+    align-items: start;
+    gap: 5px;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(1) {
+    font-size: 1.2rem;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(2) {
+    display: none;
+  }
+  footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_right {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    font-size: 1rem;
+    line-height: 100%;
+  }
+}
 html {
   font-size: 62.5%;
 }
@@ -385,6 +857,8 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 100px;
   font-size: 1.6rem;
   font-family: pretendard;
@@ -403,27 +877,27 @@ body {
   max-width: 450px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
   gap: 100px;
 }
 #container .mypage_inner .mypage {
-  width: 600px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 30px;
 }
 #container .mypage_inner .mypage h2 {
+  width: 100%;
   font-family: pretendard;
   font-size: 3.6rem;
   font-weight: bold;
 }
 #container .mypage_inner .mypage .mypage_data {
+  width: 100%;
   display: flex;
-  gap: 50px;
+  justify-content: space-between;
 }
 #container .mypage_inner .mypage .mypage_data .mypage_info {
-  width: 100px;
   display: flex;
   flex-direction: column;
   gap: 30px;
@@ -431,14 +905,13 @@ body {
 #container .mypage_inner .mypage .mypage_data .mypage_info li {
   width: 100%;
   height: 30px;
+  display: flex;
+  align-items: center;
   font-family: pretendard;
   font-size: 2rem;
   font-weight: bold;
-  display: flex;
-  align-items: center;
 }
 #container .mypage_inner .mypage .mypage_data .mypage_detail {
-  width: 450px;
   display: flex;
   flex-direction: column;
   gap: 30px;
@@ -449,13 +922,17 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 60px;
 }
 #container .mypage_inner .mypage .mypage_data .mypage_detail li p {
+  width: 80%;
   display: flex;
-  justify-content: center;
   align-items: center;
   font-family: pretendard;
   font-size: 2rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 #container .mypage_inner .mypage .mypage_data .mypage_detail li button {
   width: 40px;
@@ -464,7 +941,7 @@ body {
   justify-content: center;
   align-items: center;
   border: none;
-  border-radius: 8px;
+  border-radius: 6px;
   background: #f37100;
   color: #fff;
   font-family: pretendard;
@@ -472,17 +949,8 @@ body {
   font-weight: bold;
   cursor: pointer;
 }
-#container .mypage_inner .mypage .mypage_data .mypage_detail li div {
-  width: 80%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-#container .mypage_inner .mypage .mypage_data .mypage_detail li div i {
-  cursor: pointer;
-}
 #container .mypage_inner .mypage_policy {
-  width: 600px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 30px;
@@ -509,7 +977,7 @@ body {
   justify-content: center;
   align-items: center;
   border: none;
-  border-radius: 8px;
+  border-radius: 6px;
   background: #f37100;
   color: #fff;
   font-family: pretendard;
@@ -534,7 +1002,7 @@ body {
   justify-content: center;
   align-items: center;
   border: none;
-  border-radius: 8px;
+  border-radius: 6px;
   background: #f37100;
   color: #fff;
   font-family: pretendard;
@@ -543,8 +1011,12 @@ body {
   cursor: pointer;
 }
 #container .mypage_inner .mypage_quit {
+  width: 100%;
   font-family: pretendard;
   font-size: 2rem;
+  font-weight: bold;
   text-decoration: underline;
   text-underline-offset: 5px;
+  text-align: center;
+  cursor: pointer;
 }
