--- a/login/styles/mypage.scss
+++ b/login/styles/mypage.scss
@@ -10,6 +10,27 @@
 // footer
 @import "../../styles/footer.scss";
 
+// response
+@import "../../styles/res_header.scss";
+@import "../../styles/res_footer.scss";
+
+// mixin
+@mixin button {
+  width: 40px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-radius: 6px;
+  background: map-get($map: $color, $key: main-01);
+  color: map-get($map: $color, $key: light);
+  font-family: map-get($map: $font, $key: pretendard);
+  font-size: 1.4rem;
+  font-weight: bold;
+  cursor: pointer;
+}
+
 // common
 html {
   font-size: 62.5%;
@@ -20,6 +41,8 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 100px;
   font-size: 1.6rem;
   font-family: map-get($map: $font, $key: pretendard);
@@ -38,43 +61,40 @@ body {
     max-width: 450px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
     gap: 100px;
     .mypage {
-      width: 600px;
+      width: 100%;
       display: flex;
       flex-direction: column;
       gap: 30px;
       h2 {
+        width: 100%;
         font-family: map-get($map: $font, $key: pretendard);
         font-size: 3.6rem;
         font-weight: bold;
       }
       .mypage_data {
+        width: 100%;
         display: flex;
-        // justify-content: space-between;
-        gap: 50px;
+        justify-content: space-between;
         .mypage_info {
-          width: 100px;
           display: flex;
           flex-direction: column;
           gap: 30px;
           li {
             width: 100%;
             height: 30px;
+            display: flex;
+            align-items: center;
             font-family: map-get($map: $font, $key: pretendard);
             font-size: 2rem;
             font-weight: bold;
-            display: flex;
-            align-items: center;
           }
         }
         .mypage_detail {
-          width: 450px;
           display: flex;
           flex-direction: column;
-          // align-items: end;
           gap: 30px;
           li {
             width: 100%;
@@ -82,43 +102,26 @@ body {
             display: flex;
             justify-content: space-between;
             align-items: center;
+            gap: 60px;
             p {
+              width: 80%;
               display: flex;
-              justify-content: center;
               align-items: center;
               font-family: map-get($map: $font, $key: pretendard);
               font-size: 2rem;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              white-space: nowrap;
             }
             button {
-              width: 40px;
-              height: 30px;
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              border: none;
-              border-radius: 8px;
-              background: map-get($map: $color, $key: main-01);
-              color: map-get($map: $color, $key: light);
-              font-family: map-get($map: $font, $key: pretendard);
-              font-size: 1.4rem;
-              font-weight: bold;
-              cursor: pointer;
-            }
-            div {
-              width: 80%;
-              display: flex;
-              justify-content: space-between;
-              align-items: center;
-              i {
-                cursor: pointer;
-              }
+              @include button;
             }
           }
         }
       }
     }
     .mypage_policy {
-      width: 600px;
+      width: 100%;
       display: flex;
       flex-direction: column;
       gap: 30px;
@@ -137,19 +140,7 @@ body {
           font-weight: bold;
         }
         button {
-          width: 40px;
-          height: 30px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          border: none;
-          border-radius: 8px;
-          background: map-get($map: $color, $key: main-01);
-          color: map-get($map: $color, $key: light);
-          font-family: map-get($map: $font, $key: pretendard);
-          font-size: 1.4rem;
-          font-weight: bold;
-          cursor: pointer;
+          @include button;
         }
       }
       .policy_service {
@@ -162,27 +153,19 @@ body {
           font-weight: bold;
         }
         button {
-          width: 40px;
-          height: 30px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          border: none;
-          border-radius: 8px;
-          background: map-get($map: $color, $key: main-01);
-          color: map-get($map: $color, $key: light);
-          font-family: map-get($map: $font, $key: pretendard);
-          font-size: 1.4rem;
-          font-weight: bold;
-          cursor: pointer;
+          @include button;
         }
       }
     }
     .mypage_quit {
+      width: 100%;
       font-family: map-get($map: $font, $key: pretendard);
       font-size: 2rem;
+      font-weight: bold;
       text-decoration: underline;
       text-underline-offset: 5px;
+      text-align: center;
+      cursor: pointer;
     }
   }
 }
