--- a/styles/header.scss
+++ b/styles/header.scss
@@ -84,6 +84,7 @@ header {
         }
         &.active {
           opacity: 1;
+          color: map-get($map: $color, $key: main-01);
         }
       }
     }
