--- a/pages/styles/search.scss
+++ b/pages/styles/search.scss
@@ -5,6 +5,7 @@
 @import "../../styles/header.scss";
 @import "../../styles/footer.scss";
 @import "../../styles/res_header.scss";
+@import "../../styles/res_footer.scss";
 @import "../../res_style.scss";
 
 html {
@@ -148,4 +149,8 @@ main {
       }
     }
   }
+}
+footer {
+  position: absolute;
+  bottom: 0;
 }
