seong-il build js & debugging update

--- a/pages/styles/search.css
+++ b/pages/styles/search.css
@@ -298,6 +298,7 @@ footer .footer_inner .up_btn div {
   align-items: center;
   background: #ffc164;
   border-radius: 27px;
+  cursor: pointer;
 }
 footer .footer_inner .up_btn div i {
   font-size: 2rem;
@@ -2412,5 +2413,4 @@ main #search .search_inner .search_empty {
 
 footer {
   position: absolute;
-  bottom: 0;
 }
